--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_with(model: meeting) do |form| %>
   <% if meeting.errors.any? %>
     <div id="error_explanation">
@@ -18,12 +19,12 @@
 
   <div class="field">
     <%= form.label :start_time %>
-    <%= form.datetime_select :start_time %>
+    <%= form.datetime_select :start_time, { start_day: Date.today, start_year:Date.today.year, minute_step: 15 } %>
   </div>
 
   <div class="field">
     <%= form.label :end_time %>
-    <%= form.datetime_select :end_time %>
+  <%= form.datetime_select :end_time, { start_day: Date.today, start_year:Date.today.year, minute_step: 15 } %>
   </div>
 
   <div class="field">
