--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,1 +1,7 @@
-<p class="text-sm text-grey-dark my-2">comment as <%= current_user.username %> </p>
+<p class="text-sm text-grey-dark my-2">comment as <%= current_user.first_name %> </p>
+
+<%= form_for([@meeting, @comment], remote: true) do |f| %>
+  <%= f.text_field :reply,class:"form-control" %>
+
+  <%= f.submit :reply,class:"btn btn-success" %>
+<% end %>
