--- a/app/views/meetings/show.html.erb
+++ b/app/views/meetings/show.html.erb
@@ -22,3 +22,6 @@
 
 <%= link_to 'Edit', edit_meeting_path(@meeting) %> |
 <%= link_to 'Back', meetings_path %>
+
+<%= render 'comments/form'  %>
+<%= render @meeting.comments  %>
