--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -31,7 +31,8 @@
     <%= form.label :user_id %>
     <%= form.text_field :user_id %>
   </div>
-
+<hr>
+<%= render 'payment_form' %>
   <div class="actions">
     <%= form.submit %>
   </div>
